WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180709
WebGL TextureMapperShaderProgram shaders don't compile in MSVC
https://bugs.webkit.org/show_bug.cgi?id=180709
Summary
WebGL TextureMapperShaderProgram shaders don't compile in MSVC
Christopher Reid
Reported
2017-12-12 11:24:11 PST
MSVC likes to expand __VA_ARGS__ differently than clang and gcc which is causing shader programs to not compile in TextureMapperShaderProgram.cpp due to "#if USE(OPENGL_ES_2)" being added to the shader programs.
Attachments
patch
(2.31 KB, patch)
2017-12-12 12:22 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2017-12-12 11:29:05 PST
Here's a simple program compiled in MSVC to show what is happening and the difference in expansion: MSVC:
http://rextester.com/PXT40494
CLANG:
http://rextester.com/SZXMYM65465
(GCC acts the same as CLANG)
Christopher Reid
Comment 2
2017-12-12 12:22:56 PST
Created
attachment 329138
[details]
patch
EWS Watchlist
Comment 3
2017-12-12 12:25:59 PST
Attachment 329138
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/texmap/TextureMapperShaderProgram.cpp:66: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/texmap/TextureMapperShaderProgram.cpp:187: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2017-12-12 13:11:15 PST
Comment on
attachment 329138
[details]
patch Clearing flags on attachment: 329138 Committed
r225800
: <
https://trac.webkit.org/changeset/225800
>
WebKit Commit Bot
Comment 5
2017-12-12 13:11:16 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-12-12 13:12:28 PST
<
rdar://problem/36002359
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug