WebGL TextureMapperShaderProgram shaders don't compile in MSVC https://bugs.webkit.org/show_bug.cgi?id=180709

Patch by Christopher Reid <chris.reid@sony.com> on 2017-12-12
Reviewed by Myles C. Maxfield.

No new tests, no change in behavior.

Vertex and Fragment shaders were not compiling because TextureMapperShaderProgram.cpp was
stringifying "#if USE(OPENGL_ES_2) ... #endif" into the shaders rather than evaluating these
preprocessor directives before the STRINGIFY expansion.

Moved these #if conditions outside of STRINGIFY to remove compiler ambiguity.

* platform/graphics/texmap/TextureMapperShaderProgram.cpp:

Canonical link: https://commits.webkit.org/196614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225800 268f45cc-cd09-0410-ab3c-d52691b4dbfc